kubernetes/glance/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      volumes:
        - name: config
          configMap:
            name: glance-config
            items:
              - key: glance.yml
                path: glance.yml
      containers:
        - name: glance-dashboard
          image: glanceapp/glance:latest
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "200m"
              memory: "256Mi"
